--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 Lorem
             </li>
             <li class="list">
-                Lorem
+                Loremjon
             </li>
             <li class="list">
                 Lorem
